ftgo-application/deployment/kubernetes/aks/ftgo-cdc-service-aks.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ftgo-cdc-service
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    svc: ftgo-cdc-service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ftgo-cdc-service
  labels:
    application: ftgo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      svc: ftgo-cdc-service
  template:
    metadata:
      labels:
        svc: ftgo-cdc-service
        application: ftgo
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: ftgo-cdc-service
        image: eventuateio/eventuate-cdc-service:0.4.0.RELEASE
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
        ports:
        - containerPort: 8080
          name: httpport
        command: ["bash", "-c", "java -Dsun.net.inetaddr.ttl=30 -jar *.jar"]
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 60
          periodSeconds: 20
