ftgo-application/deployment/kubernetes/aks/ftgo-dynamodb-aks.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ftgo-dynamodb-local
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    svc: ftgo-dynamodb-local
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ftgo-dynamodb-local
  labels:
    application: ftgo
spec:
  serviceName: "ftgo-dynamodb-local"
  replicas: 1
  selector:
    matchLabels:
      svc: ftgo-dynamodb-local
  template:
    metadata:
      labels:
        svc: ftgo-dynamodb-local
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: ftgo-dynamodb-local
        image: cnadiminti/dynamodb-local:2017-04-22_beta
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 1000
          capabilities:
            drop:
              - ALL
        livenessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 8000
          initialDelaySeconds: 30
          periodSeconds: 20
        volumeMounts:
          - name: ftgo-dynamodb-persistent-storage
            mountPath: /dynamodb_local_db
        resources:
          requests:
            memory: "256Mi"
            cpu: "100m"
          limits:
            memory: "512Mi"
            cpu: "200m"
  volumeClaimTemplates:
  - metadata:
      name: ftgo-dynamodb-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: default
      resources:
        requests:
          storage: 1Gi
