ftgo-application/deployment/kubernetes/aks/ftgo-kafka-aks.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ftgo-kafka
  labels:
    name: ftgo-kafka
spec:
  ports:
  - port: 9092
    targetPort: 9092
  selector:
    role: ftgo-kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ftgo-kafka
spec:
  serviceName: "ftgo-kafka"
  replicas: 1
  selector:
    matchLabels:
      role: ftgo-kafka
  template:
    metadata:
      labels:
        role: ftgo-kafka
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ftgo-kafka
          image: confluentinc/cp-kafka:5.2.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          ports:
            - containerPort: 9092
          volumeMounts:
            - name: ftgo-kafka-persistent-storage
              mountPath: /var/lib/kafka/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
  volumeClaimTemplates:
  - metadata:
      name: ftgo-kafka-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: default
      resources:
        requests:
          storage: 1Gi
