ftgo-application/deployment/kubernetes/aks/ftgo-zookeeper-aks.yml
---
apiVersion: v1
kind: Service
metadata:
  name: ftgo-zookeeper
  labels:
    name: ftgo-zookeeper
spec:
  ports:
  - port: 2181
    targetPort: 2181
  clusterIP: None
  selector:
    role: ftgo-zookeeper
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ftgo-zookeeper
spec:
  serviceName: "ftgo-zookeeper"
  replicas: 1
  selector:
    matchLabels:
      role: ftgo-zookeeper
  template:
    metadata:
      labels:
        role: ftgo-zookeeper
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      terminationGracePeriodSeconds: 10
      securityContext:
        runAsNonRoot: true
        runAsUser: 1000
        fsGroup: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: ftgo-zookeeper
          image: confluentinc/cp-zookeeper:5.2.4
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            runAsUser: 1000
            capabilities:
              drop:
                - ALL
          ports:
              - containerPort: 2181
          volumeMounts:
            - name: ftgo-zookeeper-persistent-storage
              mountPath: /var/lib/zookeeper/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "200m"
  volumeClaimTemplates:
  - metadata:
      name: ftgo-zookeeper-persistent-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: default
      resources:
        requests:
          storage: 1Gi
